--- a/notebooks/Embalmer Shear Align Dusted.ipynb
+++ b/notebooks/Embalmer Shear Align Dusted.ipynb
@@ -3,23 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "base = \"/project/flatiron2/analysis_SHOGUN/data/references/linear\"\n",
-    "%time !emb15 --references {base}/rep82_combined.fixed.fna --output {base}/rep82_combined.edb --npenalize --makedb --fingerprint --accelerator {base}/rep82_combined.acx --shear --threads 32 > {base}/embalmer_build.log"
+    "%%capture capt\n",
+    "%time !emb15 --queries ../data/references/rep82_dusted/rep82_dusted.shear.fna --references ../data/references/rep82_dusted/rep82_dusted.edx --accelerator ../data/references/rep82_dusted/rep82_dusted.acx --output ../data/references/rep82_dusted/shear_results.b6 --id .98 --npenalize --skipambig --taxa_ncbi --taxonomy ../data/references/rep82_dusted/rep82_dusted.tax "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(capt)"
+   ]
   }
  ],
  "metadata": {
