--- a/notebooks/Embalmer Shear Align.ipynb
+++ b/notebooks/Embalmer Shear Align.ipynb
@@ -3,21 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "base = \"/project/flatiron2/analysis_SHOGUN/data/references/linear\"\n",
-    "%time !emb15 --references {base}/rep82_combined.fixed.fna --output {base}/rep82_combined.edb --npenalize --makedb --fingerprint --accelerator {base}/rep82_combined.acx --shear --threads 32 > {base}/embalmer_build.log"
+    "%time !/usr/bin/time -v emb15 --queries ../data/references/rep82/rep82.shear.fna --references ../data/references/rep82/rep82.edx --accelerator ../data/references/rep82/rep82.acx --output ../data/references/rep82/shear_results.b6 --id .98 --npenalize --skipambig --taxa_ncbi --taxonomy ../data/references/rep82/rep82.tax  --threads 48 &> ../data/references/rep82/rep82.shear.log"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
