--- a/notebooks/Remove Spaces from Taxamap.ipynb
+++ b/notebooks/Remove Spaces from Taxamap.ipynb
@@ -2,24 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "base = \"/project/flatiron2/analysis_SHOGUN/data/references/linear\"\n",
-    "%time !emb15 --references {base}/rep82_combined.fixed.fna --output {base}/rep82_combined.edb --npenalize --makedb --fingerprint --accelerator {base}/rep82_combined.acx --shear --threads 32 > {base}/embalmer_build.log"
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"../data/references/rep82/rep82.tax\") as inf:\n",
+    "    csv_inf = csv.reader(inf, delimiter=\"\\t\")\n",
+    "    with open(\"../data/references/rep82.fixed.tax\", \"w\") as outf:\n",
+    "        for row in csv_inf:\n",
+    "            row[1] = row[1].replace(\" \", \"_\")\n",
+    "            outf.write(\"\\t\".join(row) + \"\\n\")"
+   ]
   }
  ],
  "metadata": {
